<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_kill_kakaotalk"
        android:text="@string/b_kill_kakotalk"/>

    <Button
        android:id="@+id/b_kill_instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_kill_instagram" />

    <Button
        android:id="@+id/b_kill_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/b_kill_facebook" />

    <Button
        android:id="@+id/b_kill_chrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/b_kill_chrome" />

    <Button
        android:id="@+id/b_kill_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/b_kill_all" />
</LinearLayout>